# panacea

./: .gitignore  .gitmodules  README.md  docker-compose-debug.yml  docker-compose.yml
analysis/: complex_graph.py  complex_graph_all.sh  complex_graph_desc.py  complex_graph_desc.sh  complex_graph_desc_all.py  complex_graph_desc_all.sh  customer360.py  graph.py  graph.sh  graph_all.sh
backend/: Dockerfile  algorithm.py  app.py  pyproject.toml  requirements.txt
backend/forceatlas2-py/forceatlas2/: fa2util.c
frontend/: .htpasswd  Dockerfile  index.html  server.conf  simplehttp.py
frontend/public/: index.html
neo4j/: graph_complex_all.neo.edges  graph_complex_all.neo.nodes  neo4j-init.sh
neo4j/conf/: neo4j.conf
scripts/: sample.py
x2/: Dockerfile
