[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphql-core = "=2.3.1"
graphene = "=2.1.8"
responder = "=1.3.2"
networkx = "=2.4"
pydot = "=1.4.1"
numpy = "=1.17.2"
pyvis = "=0.1.7.0"
cython = "=0.29.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
